fix: add gap between label and dropdown

--- a/src/components/common/TestnetLabel/TestnetLabel.module.css
+++ b/src/components/common/TestnetLabel/TestnetLabel.module.css
@@ -21,7 +21,7 @@
 }
 
 .labelMenu {
-  top: 100%;
+  top: 125%;
   left: 0;
   width: 100%;
 }
